Update 6/23 빅분기 실기 공부

--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 4. 서울시 따릉이 이용정보 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 4. 서울시 따릉이 이용정보 데이터.ipynb
@@ -2,19 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bf0c1fc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여일자</th>\n",
+       "      <th>대여시간</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>대여구분코드</th>\n",
+       "      <th>성별</th>\n",
+       "      <th>연령대코드</th>\n",
+       "      <th>이용건수</th>\n",
+       "      <th>운동량</th>\n",
+       "      <th>탄소량</th>\n",
+       "      <th>이동거리</th>\n",
+       "      <th>사용시간</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3541</td>\n",
+       "      <td>정기권</td>\n",
+       "      <td>F</td>\n",
+       "      <td>~10대</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>765</td>\n",
+       "      <td>정기권</td>\n",
+       "      <td>F</td>\n",
+       "      <td>~10대</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.21</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>1526.81</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2637</td>\n",
+       "      <td>정기권</td>\n",
+       "      <td>F</td>\n",
+       "      <td>~10대</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.40</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>1608.56</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2919</td>\n",
+       "      <td>정기권</td>\n",
+       "      <td>F</td>\n",
+       "      <td>~10대</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>549</td>\n",
+       "      <td>정기권</td>\n",
+       "      <td>F</td>\n",
+       "      <td>~10대</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.04</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>731.55</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         대여일자  대여시간  대여소번호 대여구분코드 성별 연령대코드  이용건수    운동량   탄소량     이동거리  사용시간\n",
+       "0  2021-06-01     0   3541    정기권  F  ~10대     1   0.00  0.00     0.00     8\n",
+       "1  2021-06-01     0    765    정기권  F  ~10대     1  27.21  0.35  1526.81    19\n",
+       "2  2021-06-01     0   2637    정기권  F  ~10대     1  41.40  0.37  1608.56    18\n",
+       "3  2021-06-01     0   2919    정기권  F  ~10대     1   0.00  0.00     0.00    75\n",
+       "4  2021-06-01     0    549    정기권  F  ~10대     1  13.04  0.17   731.55     6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "df =pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/bicycle/seoul_bi.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/bicycle/seoul_bi.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "15c3c4aa",
    "metadata": {},
    "outputs": [
@@ -242,7 +365,7 @@
        "[678950 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "67026609",
    "metadata": {},
    "outputs": [
@@ -470,13 +593,49 @@
        "[678950 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.set_index('대여소번호').sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "07817fb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 678950 entries, 0 to 678949\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column    Non-Null Count   Dtype         \n",
+      "---  ------    --------------   -----         \n",
+      " 0   대여일자      678950 non-null  datetime64[ns]\n",
+      " 1   대여시간      678950 non-null  int64         \n",
+      " 2   대여소번호     678950 non-null  int64         \n",
+      " 3   대여구분코드    678950 non-null  object        \n",
+      " 4   성별        678950 non-null  object        \n",
+      " 5   연령대코드     678950 non-null  object        \n",
+      " 6   이용건수      678950 non-null  int64         \n",
+      " 7   운동량       678950 non-null  object        \n",
+      " 8   탄소량       678950 non-null  object        \n",
+      " 9   이동거리      678950 non-null  float64       \n",
+      " 10  사용시간      678950 non-null  int64         \n",
+      " 11  day_name  678950 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(4), object(6)\n",
+      "memory usage: 62.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -631,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "fe4890ab",
    "metadata": {},
    "outputs": [
@@ -885,11 +1044,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dd04aca0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = pd.to_datetime('2021/06/07')\n",
+    "answer = df.loc[(df['대여일자'] == target)&(df['연령대코드']=='~10대')]['이용건수'].median()\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -902,11 +1073,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "26706be5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>이용 횟수</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>대여시간</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">8</th>\n",
+       "      <th>2701</th>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>646</th>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1152</th>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">7</th>\n",
+       "      <th>259</th>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">6</th>\n",
+       "      <th>2744</th>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1125</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028</th>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            이용 횟수\n",
+       "대여시간 대여소번호       \n",
+       "8    2701     119\n",
+       "     646      115\n",
+       "     1152      92\n",
+       "7    259      104\n",
+       "     230       77\n",
+       "     726       77\n",
+       "6    2744      45\n",
+       "     1125      40\n",
+       "     1028      36"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "target = df.loc[~(df['대여일자'].dt.day_name().isin(['Sunday', 'Saturday']))&(df['대여시간'].isin([6, 7, 8]))]\n",
+    "answer = target.groupby(['대여시간', '대여소번호']).size().to_frame(name='이용 횟수').sort_values(by=['대여시간', '이용 횟수'], ascending=False).groupby('대여시간').head(3)\n",
+    "display(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -919,11 +1186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "64fe72dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5092.139707505356\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = df.loc[df['이동거리'] >= df['이동거리'].mean(), '이동거리']\n",
+    "answer = target.std()\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -936,11 +1215,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "0031378d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>이동거리</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>남</th>\n",
+       "      <td>3209.110871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>여</th>\n",
+       "      <td>3468.575025</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            이동거리\n",
+       "sex             \n",
+       "남    3209.110871\n",
+       "여    3468.575025"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['sex'] = df['성별'].map(lambda x:'남' if x in ['M', 'm'] else '여')\n",
+    "answer = df.groupby(by='sex')[['이동거리']].mean()\n",
+    "display(answer)"
+   ]
   }
  ],
  "metadata": {
