--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 5. 전세계 행복도 지표 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 5. 전세계 행복도 지표 데이터.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c3ebee0",
    "metadata": {},
@@ -120,8 +121,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   행복랭킹          나라명     점수  상대GDP  사회적지원  행복기대치  선택의 자유도    관대함  부패에 대한인식  \\\n",
-       "0     1      Finland  7.769  1.340  1.587  0.986    0.596  0.153     0.393   \n",
+       "   행복랭킹          나라명     점수  상대GDP  사회적지원  행복기대치  선택의 자유도    관대함  부패에 대한인식   \n",
+       "0     1      Finland  7.769  1.340  1.587  0.986    0.596  0.153     0.393  \\\n",
        "1     2      Denmark  7.600  1.383  1.573  0.996    0.592  0.252     0.410   \n",
        "2     3       Norway  7.554  1.488  1.582  1.028    0.603  0.271     0.341   \n",
        "3     4      Iceland  7.494  1.380  1.624  1.026    0.591  0.354     0.118   \n",
@@ -147,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d289771e",
    "metadata": {},
@@ -156,13 +158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "66d78dce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.259\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.loc[df['행복랭킹']==10]['점수'].mean()\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "caeb0157",
    "metadata": {},
@@ -172,13 +186,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "75e2ffd3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>점수</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>년도</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>6.64678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>6.67002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           점수\n",
+       "년도           \n",
+       "2018  6.64678\n",
+       "2019  6.67002"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "answer = df.loc[df['행복랭킹'] <= 50].groupby(by='년도')[['점수']].mean()\n",
+    "display(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "121f054a",
    "metadata": {},
@@ -188,13 +258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a45ab3ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.40529152271510027\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.loc[df['년도']==2018, ['점수', '부패에 대한인식']].corr().iloc[0, 1]\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "59081221",
    "metadata": {},
@@ -204,13 +286,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4bba1e15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.duplicated(subset=['행복랭킹', '나라명']).sum()\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1d1c1291",
    "metadata": {},
@@ -220,13 +314,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f1290453",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v1</th>\n",
+       "      <th>v2</th>\n",
+       "      <th>corr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>행복기대치</td>\n",
+       "      <td>상대GDP</td>\n",
+       "      <td>0.835462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>점수</td>\n",
+       "      <td>상대GDP</td>\n",
+       "      <td>0.793883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>행복기대치</td>\n",
+       "      <td>점수</td>\n",
+       "      <td>0.779883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>사회적지원</td>\n",
+       "      <td>점수</td>\n",
+       "      <td>0.777058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>상대GDP</td>\n",
+       "      <td>사회적지원</td>\n",
+       "      <td>0.754906</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      v1     v2      corr\n",
+       "0  행복기대치  상대GDP  0.835462\n",
+       "1     점수  상대GDP  0.793883\n",
+       "2  행복기대치     점수  0.779883\n",
+       "3  사회적지원     점수  0.777058\n",
+       "4  상대GDP  사회적지원  0.754906"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 못 품\n",
+    "target = df.loc[df['년도']==2019].drop(columns=['행복랭킹', '나라명', '년도']).corr().unstack().to_frame().reset_index().dropna()\n",
+    "result = target.loc[target[0] != 1].sort_values(0, ascending=False).drop_duplicates(0)\n",
+    "answer = result.head().reset_index(drop=True)\n",
+    "answer.columns = ['v1', 'v2', 'corr']\n",
+    "display(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0affd48d",
    "metadata": {},
@@ -236,13 +412,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "760e3115",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          점수\n",
+      "년도          \n",
+      "2018  3.1800\n",
+      "2019  3.1408\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.sort_values('행복랭킹', ascending=False).head(10).groupby('년도')[['점수']].mean()\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b205af5",
    "metadata": {},
@@ -252,13 +443,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e2cde23e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6765307486631016\n"
+     ]
+    }
+   ],
+   "source": [
+    "me = df.loc[df['년도']==2019, '상대GDP'].mean()\n",
+    "target1 = df.loc[(df['년도'] == 2019)&(df['상대GDP'] > me), '상대GDP'].mean()\n",
+    "target2 = df.loc[(df['년도'] == 2019)&(df['상대GDP'] < me), '상대GDP'].mean()\n",
+    "answer = target1 - target2\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc423f32",
    "metadata": {},
@@ -275,6 +481,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e93d0ac",
    "metadata": {},
@@ -291,6 +498,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc604c96",
    "metadata": {},
@@ -323,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
