--- a/빅데이터분석기사/작업3유형(datamanim).ipynb
+++ b/빅데이터분석기사/작업3유형(datamanim).ipynb
@@ -751,6 +751,227 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 독립표본 검정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 두개 학급의 시험성적에 대한 데이터이다. 두 학습의 시험 평균(비모수검정의 경우 중위값)은 동일하다 말할 수 있는지 확인 하라\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt\n",
+    "df1 = pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/scipy/ind1.csv')\n",
+    "df2 = pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/scipy/ind2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.379673033952713 0.6793646216392517\n",
+      "0.11302904824468704\n",
+      "[0.00619015]\n",
+      "동일하다 할 수 없음\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro, ttest_ind, levene, wilcoxon\n",
+    "_, pvalue1 = shapiro(df1)\n",
+    "_, pvalue2 = shapiro(df2)\n",
+    "print(pvalue1, pvalue2) # 정규성 만족\n",
+    "\n",
+    "_, pvalue = levene(df1['data'], df2['data'])\n",
+    "print(pvalue) # 등분산성 만족\n",
+    "\n",
+    "_, pvalue = ttest_ind(df1, df2, equal_var=True, alternative='two-sided')\n",
+    "print(pvalue)\n",
+    "print('동일' if pvalue > 0.05 else '동일하다 할 수 없음')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>74</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>69.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>88.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>74</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>80</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>91</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>84</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>57</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A     B\n",
+       "0    74  30.0\n",
+       "1    30  59.0\n",
+       "2    35  69.0\n",
+       "3    45  88.0\n",
+       "4    74  68.0\n",
+       "..   ..   ...\n",
+       "295  80   NaN\n",
+       "296  30   NaN\n",
+       "297  91   NaN\n",
+       "298  84   NaN\n",
+       "299  57   NaN\n",
+       "\n",
+       "[300 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 두개 학급의 시험성적에 대한 데이터이다. 두 학습의 시험 평균(비모수검정의 경우 중위값)은 동일하다 말할 수 있는지 확인 하라\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/scipy/scipy5.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A      0\n",
+       "B    120\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ga:0.0000, gB:0.0001\n",
+      "0.9804781743503561\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro\n",
+    "gA = df['A']\n",
+    "gB = df['B'].dropna()\n",
+    "_, pvalue1 = shapiro(gA)\n",
+    "_, pvalue2 = shapiro(gB)\n",
+    "print(f'ga:{pvalue1:.4f}, gB:{pvalue2:.4f}') # 정규성 만족하지 않음\n",
+    "\n",
+    "from scipy.stats import ranksums # 행 개수가 달라도 된다\n",
+    "_, pvalue = ranksums(gA, gB)\n",
+    "print(pvalue) # 귀무가설 채택"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
