--- a/ML_DL/class_sklearn.ipynb
+++ b/ML_DL/class_sklearn.ipynb
@@ -3082,6 +3082,283 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7/19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 정확도(Accuracy)\n",
+    "import numpy as np\n",
+    "from sklearn.base import BaseEstimator\n",
+    "\n",
+    "class MyDummyClassifier(BaseEstimator):\n",
+    "    # fit() 메서드는 아무것도 학습하지 않음\n",
+    "    def fit(self, X, y=None):\n",
+    "        pass\n",
+    "    \n",
+    "    # predict() 메서드는 단순히 Sex feature가 1이면 0, 그렇지 않으면 1로 예측\n",
+    "    def predict(self, X):\n",
+    "        pred = np.zeros((X.shape[0], 1))\n",
+    "        for i in range (X.shape[0]):\n",
+    "            if X['Sex'].iloc[i] == 1:\n",
+    "                pred[i] = 0\n",
+    "            else:\n",
+    "                pred[i] = 1\n",
+    "        return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Null 처리 함수\n",
+    "def fillna(df):\n",
+    "    df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+    "    df['Cabin'].fillna('N', inplace=True)\n",
+    "    df['Embarked'].fillna('N', inplace=True)\n",
+    "    df['Fare'].fillna(0, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# ML 알고리즘에 불필요한 속성 제거\n",
+    "def drop_feature(df):\n",
+    "    df.drop(['PassengerId', 'Name', 'Ticket'], axis=1, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# 레이블 인코딩\n",
+    "def format_features(df):\n",
+    "    df['Cabin'] = df['Cabin'].str[:1]\n",
+    "    features = ['Cabin', 'Sex', 'Embarked']\n",
+    "    for feature in features:\n",
+    "        le = LabelEncoder()\n",
+    "        le = le.fit(df[feature])\n",
+    "        df[feature] = le.transform(df[feature])\n",
+    "    return df\n",
+    "\n",
+    "# 앞에서 설정한 Data Preprocessing 함수 호출\n",
+    "def transform_features(df):\n",
+    "    df = fillna(df)\n",
+    "    df = drop_feature(df)\n",
+    "    df = format_features(df)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dummy Classifier의 정확도는 0.7877\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# 데이터 불러온 후 데이터 가공, train/test 데이터 분할\n",
+    "titanic = pd.read_csv('data/titanic_train.csv')\n",
+    "Y = titanic['Survived']\n",
+    "X = titanic.drop('Survived', axis=1)\n",
+    "X = transform_features(X)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "# Dummy Classifier를 이용해 학습/예측/평가 수행\n",
+    "myclf = MyDummyClassifier()\n",
+    "myclf.fit(x_train, y_train)\n",
+    "\n",
+    "mypred = myclf.predict(x_test)\n",
+    "print(f'Dummy Classifier의 정확도는 {accuracy_score(y_test, mypred):.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  5. ...  0.  0.  0.]\n",
+      " [ 0.  0.  0. ... 10.  0.  0.]\n",
+      " [ 0.  0.  0. ... 16.  9.  0.]\n",
+      " ...\n",
+      " [ 0.  0.  1. ...  6.  0.  0.]\n",
+      " [ 0.  0.  2. ... 12.  0.  0.]\n",
+      " [ 0.  0. 10. ... 12.  1.  0.]]\n",
+      "digits.data.shape: (1797, 64)\n",
+      "[0 1 2 ... 8 9 8]\n",
+      "digits.target.shape: (1797,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_digits\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.base import BaseEstimator\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "class MyFakeClassifier(BaseEstimator):\n",
+    "    def fit(self, X, y):\n",
+    "        pass\n",
+    "    \n",
+    "    # 입력값으로 들어오는 X 데이터셋 크기만큼 모두 0값으로 만들어 반환\n",
+    "    def predict(self, X):\n",
+    "        return np.zeros((len(X), 1), dtype=bool)\n",
+    "\n",
+    "# 데이터 로딩\n",
+    "digits = load_digits()\n",
+    "\n",
+    "print(digits.data)\n",
+    "print('digits.data.shape:', digits.data.shape)\n",
+    "print(digits.target)\n",
+    "print('digits.target.shape:', digits.target.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digits.target == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# digits 번호가 7번이면 True, 이를 astype(int)를 통해 1로 변환. 7이 아니면 False이고 0으로 변환\n",
+    "y = (digits.target == 7).astype(int)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(digits.data, y, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "레이블 테스트 세트 크기: (450,)\n",
+      "테스트셋 레이블 0과 1의 분포도\n",
+      "0    405\n",
+      "1     45\n",
+      "Name: count, dtype: int64\n",
+      "모든 예측을 0으로 하여도 정확도가 0.9000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 불균형 레이블 데이터 분포도 확인\n",
+    "print('레이블 테스트 세트 크기:', y_test.shape)\n",
+    "print('테스트셋 레이블 0과 1의 분포도')\n",
+    "print(pd.Series(y_test).value_counts())\n",
+    "\n",
+    "# Dummy Classifier로 학습/예측/정확도 평가\n",
+    "fakeclf = MyFakeClassifier()\n",
+    "fakeclf.fit(x_train, y_train)\n",
+    "fakepred = fakeclf.predict(x_test)\n",
+    "print(f'모든 예측을 0으로 하여도 정확도가 {accuracy_score(y_test, fakepred):.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[405,   0],\n",
+       "       [ 45,   0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# fakepred와 y_test의 confusion Matrix 출력\n",
+    "confusion_matrix(y_test, fakepred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정밀도: 0.0\n",
+      "재현율: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hw981\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정밀도와 재현율\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "\n",
+    "print('정밀도:', precision_score(y_test, fakepred))\n",
+    "print('재현율:', recall_score(y_test, fakepred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
