--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 5. 전세계 행복도 지표 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 5. 전세계 행복도 지표 데이터.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "66d78dce",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "75e2ffd3",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "a45ab3ef",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "4bba1e15",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "f1290453",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "760e3115",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "e2cde23e",
    "metadata": {},
    "outputs": [
@@ -474,11 +474,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e810a649",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "년도\n",
+      "2018    0.3267\n",
+      "2019    0.3201\n",
+      "Name: 부패에 대한인식, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.sort_values(by='부패에 대한인식', ascending=False).groupby('년도').head(20).groupby('년도')['부패에 대한인식'].mean()\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -491,11 +505,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6f7d6851",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = sum(df.loc[(df['행복랭킹'] <= 50) & (df['년도']==2018) | (df['행복랭킹'] >= 50) & (df['년도']==2019), '나라명'].value_counts()==2)\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -508,8 +533,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "0bc3a8f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "점수    0.87\n",
+      "Name: Burundi, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = df['나라명'].value_counts()\n",
+    "target = count[count>=2].index\n",
+    "\n",
+    "df2 = df.loc[df['나라명'].isin(target)].reset_index(drop=True)\n",
+    "df2.loc[df2['년도']==2018, '점수'] = df2.loc[df2['년도']==2018, '점수'].values * (-1)\n",
+    "result = df2.groupby('나라명').sum()['점수'].sort_values().to_frame().iloc[-1]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4086ee",
    "metadata": {},
    "outputs": [],
    "source": []
