--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 6. 지역구 에너지 소비량 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 6. 지역구 에너지 소비량 데이터.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "bf0c1fc5",
    "metadata": {},
    "outputs": [
@@ -104,15 +104,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        DateTime  Temperature  Humidity  Wind Speed  general diffuse flows  \\\n",
-       "0  1/1/2017 0:00        6.559      73.8       0.083                  0.051   \n",
+       "        DateTime  Temperature  Humidity  Wind Speed  general diffuse flows   \n",
+       "0  1/1/2017 0:00        6.559      73.8       0.083                  0.051  \\\n",
        "1  1/1/2017 0:10        6.414      74.5       0.083                  0.070   \n",
        "2  1/1/2017 0:20        6.313      74.5       0.080                  0.062   \n",
        "3  1/1/2017 0:30        6.121      75.0       0.083                  0.091   \n",
        "4  1/1/2017 0:40        5.921      75.7       0.081                  0.048   \n",
        "\n",
-       "   diffuse flows  Zone 1 Power Consumption  Zone 2  Power Consumption  \\\n",
-       "0          0.119               34055.69620                16128.87538   \n",
+       "   diffuse flows  Zone 1 Power Consumption  Zone 2  Power Consumption   \n",
+       "0          0.119               34055.69620                16128.87538  \\\n",
        "1          0.085               29814.68354                19375.07599   \n",
        "2          0.100               29128.10127                19006.68693   \n",
        "3          0.096               28228.86076                18361.09422   \n",
@@ -126,15 +126,37 @@
        "4                18442.40964  "
       ]
      },
-     "execution_count": 68,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 52416 entries, 0 to 52415\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   DateTime                   52416 non-null  object \n",
+      " 1   Temperature                52416 non-null  float64\n",
+      " 2   Humidity                   52416 non-null  float64\n",
+      " 3   Wind Speed                 52416 non-null  float64\n",
+      " 4   general diffuse flows      52416 non-null  float64\n",
+      " 5   diffuse flows              52416 non-null  float64\n",
+      " 6   Zone 1 Power Consumption   52416 non-null  float64\n",
+      " 7   Zone 2  Power Consumption  52416 non-null  float64\n",
+      " 8   Zone 3  Power Consumption  52416 non-null  float64\n",
+      "dtypes: float64(8), object(1)\n",
+      "memory usage: 3.6+ MB\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "df= pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/consum/Tetuan%20City%20power%20consumption.csv')\n",
-    "df.head()"
+    "display(df.head())\n",
+    "df.info()"
    ]
   },
   {
@@ -314,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
