--- a/DB_engineer_class/pymysql.ipynb
+++ b/DB_engineer_class/pymysql.ipynb
@@ -280,6 +280,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8/28"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 패턴 익히기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 라이브러리 가져오기\n",
+    "import pymysql\n",
+    "\n",
+    "# DB 접속\n",
+    "db = pymysql.connect(host='localhost', port=3306, user='root', passwd='1234',\n",
+    "                     db='ecommerce', charset='utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 커서 가져오기\n",
+    "cursor = db.cursor()\n",
+    "\n",
+    "# SQL 구문 만들기\n",
+    "sql = '''\n",
+    "    CREATE TABLE product2 (\n",
+    "        PRODUCT_CODE VARCHAR(20) NOT NULL,\n",
+    "        TITLE VARCHAR(200) NOT NULL,\n",
+    "        ORI_PRICE INT,\n",
+    "        DISCOUNT_PRICE INT,\n",
+    "        DISCOUNT_PERCENT INT,\n",
+    "        DELIVERY VARCHAR(2),\n",
+    "        CONSTRAINT PRIMARY KEY PK_product2_PRUDUCT_CODE (PRODUCT_CODE)\n",
+    "    );\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SQL 구문 실행\n",
+    "cursor.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# commit 하기\n",
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# db 연결 닫기\n",
+    "db.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
